--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.1",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "tsc-watch": "^4.2.9",
