--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 7000
 DB_CNN = mongodb+srv://visita:t7CNJsBhk3sXSAf3@cluster0.8pdxp.mongodb.net/escueladb?retryWrites=true&w=majority
+JWT_SECRET = Qdqwerwq32asdqa34ewadf3443t
