--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.7"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.1",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.1",
     "tsc-watch": "^4.2.9",
     "tslint": "^6.1.3",
     "typescript": "^4.2.4"
