--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.27.1",
     "cors": "^2.8.5",
+    "datauri": "^4.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.7"
+    "mongoose": "^5.12.7",
+    "multer": "^1.4.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.1",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/multer": "^1.4.7",
     "tsc-watch": "^4.2.9",
     "tslint": "^6.1.3",
     "typescript": "^4.2.4"
