--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 7000
-DB_CNN = mongodb://localhost:27017/escueladb
+DB_CNN = mongodb+srv://calendaruser:Ril4Wh3GOFqjfmGy@cluster0.d2pon.mongodb.net/escueladb?retryWrites=true&w=majority
 JWT_SECRET = Qdqwerwq32asdqa34ewadf3443t
